--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rethinkdb-insuretable",
+  "name": "rethinkdb-ensuretable",
   "version": "1.0.2",
-  "description": "A helper method to insure RethinkDB table exists",
+  "description": "A helper method to ensure RethinkDB table exists",
   "keywords": [
     "rethinkdb",
     "table"
@@ -19,7 +19,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/alexgorbatchev/rethinkdb-insuretable"
+    "url": "https://github.com/alexgorbatchev/rethinkdb-ensuretable"
   },
   "devDependencies": {
     "chai": "^3.5.0",
